--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8">
     <title>DMS</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <style>
+        /* Add some CSS to style the form */
+        label {
+            font-weight: bold;
+        }
+        input[type="radio"] {
+            margin-right: 10px;
+        }
+        textarea {
+            width: 100%;
+            height: 150px; /* Increase the height of the textarea as needed */
+        }
+    </style>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 <div class="p-5 mb-5 text-center</> bg-light">
@@ -11,7 +25,51 @@
     <h4 class="mb-3">도메인 생성</h4>
 </div>
 
-내용 작성 예정
+<form id="domainForm">
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" required><br><br>
 
-<script src="/js/article.js"></script>
+    <label>Type:</label>
+    <input type="radio" id="coin" name="type" value="COIN" required>
+    <label for="coin">COIN</label>
+    <input type="radio" id="stock" name="type" value="STOCK" required>
+    <label for="stock">STOCK</label><br><br>
+
+    <label for="description">Description:</label><br>
+    <textarea id="description" name="description" required></textarea><br><br>
+
+    <button type="submit">Create</button>
+</form>
+
+<script>
+        $(document).ready(function() {
+            $('#domainForm').submit(function(event) {
+                event.preventDefault();
+
+                // Get form data
+                var formData = {
+                    name: $('#name').val(),
+                    type: $('input[name="type"]:checked').val(),
+                    description: $('#description').val()
+                };
+
+                // Send POST request to /domain
+                $.ajax({
+                    type: 'POST',
+                    url: '/domain',
+                    contentType: 'application/json',
+                    data: JSON.stringify(formData),
+                    success: function(response) {
+                        alert('Domain created successfully');
+                        window.location.href="/"
+                    },
+                    error: function(error) {
+                        alert('Error creating domain');
+                        alert(error);
+                        console.error(error);
+                    }
+                });
+            });
+        });
+    </script>
 </body>
