--- a/src/main/resources/templates/domains.html
+++ b/src/main/resources/templates/domains.html
@@ -20,7 +20,7 @@
       <div class="card-body">
         <h5 class="card-title" th:text="${item.name}">name</h5>
         <span class="card-text" th:text="${item.type}">type</span> <span class="card-text" th:text="${item.ticket}">ticket</span>
-        <a th:href="@{/articles/{id}(id=${item.id})}" class="btn btn-primary">자세히 보러가기</a>
+        <a th:href="@{/web/domain/{id}(id=${item.name})}" class="btn btn-primary">자세히 보러가기</a>
       </div>
     </div>
     <br>
